renamed:    app.py -> 1_Upload_File.py 	modified:   common.py 	modified:   logs/invoicingReport/app.log 	renamed:    pages/data_validation.py -> pages/2_Data_Validation.py 	new file:   pages/3_AI_Assistant.py 	new file:   pages/4_Create_Reports.py 	deleted:    pages/ai_assistant.py 	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ streamlit>=1.31
 pandas
 google-cloud-bigquery
 llama-index-core
+llama-index-llms-openai
+llama-index-embeddings-openai
+plotly
+numpy
